Se configura BusinessParameter y firma de documento